--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "gulp": "^4.0.2",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2"
+  },
+  "dependencies": {
+    "gulp-concat": "^2.6.1"
   }
 }
